# eve-toc-build-review

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  deploy_swarm.py  docker-compose.yml  index.html  main.py  monitor_swarm.py  orchestrator.py  privacy-policy.html  pyproject.toml  requirements.txt  seed_session.py  server.py  start_outbound_dialing  start_outbound_dialing.command  terms-and-conditions.html
app/: backchannel.py  bounded_queue.py  canary.py  clock.py  config.py  conversation_memory.py  dashboard_data.py  dialogue_policy.py  eve_prompt.py  fact_guard.py  llm_client.py  metrics.py  objection_library.py  orchestrator.py  outcome_schema.py  persona_prompt.py  phrase_selector.py  playbook_policy.py  prom_export.py  protocol.py  provider.py  safety_policy.py  security.py  server.py  speech_planner.py  tools.py  trace.py  transport_ws.py  turn_handler.py  voice_guard.py
artifacts/: retell_kb_consolidation_20260217T005207Z.json  retell_kb_consolidation_20260217T005301Z.json  retell_ws_lessons_learned.md
dashboard/: index.html
docs/: Outbound Dialing SOP.md  job_hunt_copilot.md  lead_factory.md  ontology-live-gate.md  ontology-synthetic-gate.md  public-handoff-checklist.md  retell_ws_brain_contract.md  retell_ws_brain_playbook.md  revenue_ops_loop.md  self_improve_sop.md  voice_interaction_contract.md
orchestration/: eve-v7-harness-run.rb  eve-v7-orchestrator.yaml  eve-v7-runtime-harness.md  eve-v7-test-cases.yaml
scripts/: applier.py  b2b_switch_to_ws_brain.sh  build_live_campaign_queue.py  call_b2b.sh  call_status.sh  (+26 more)
(+110 files in other folders)
